Final Deliverables/Final Code/Kubernetes/flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: flask-app
